# doca-samples

./: README.md  VERSION
applications/: VERSION  meson.build  meson.build.public  meson_options.txt
applications/app_shield_agent/: app_shield_agent_core.c  meson.build
applications/bifurcated_driver_model/: bifurcated_driver_model.c  bifurcated_driver_model_core.c  bifurcated_driver_model_core.h  meson.build  meson.build.public
applications/bifurcated_driver_model/dependencies/: meson.build
applications/common/: dpdk_utils.c  dpdk_utils.h  flow_parser.c  flow_skeleton.c  meson.build  packet_parser.c
applications/common/device/: meson.build
applications/dma_copy/: meson.build
applications/dpa_all_to_all/: build_device_code.sh  build_device_code.sh.public  build_dpa_all_to_all.sh  build_dpa_all_to_all.sh.public  meson.build  meson.build.public
applications/dpa_all_to_all/host/: dpa_all_to_all_core.c
applications/dpu_gpu_remote_offload/: meson.build  meson.build.public
applications/dpu_gpu_remote_offload/client/: application.cpp  main.cpp  stats.hpp  thread.cpp
applications/dpu_gpu_remote_offload/dependencies/: meson.build
applications/dpu_gpu_remote_offload/orchestrator/: application.cpp  comch_control_channel.cpp  comch_control_channel.hpp  comch_datapath.cpp  configuration.hpp  gpu_processing.cu  main.cpp  stats.hpp
applications/dpu_gpu_remote_offload/remote_offload_common/: os_utils.hpp
applications/dpu_gpu_remote_offload/server/: application.cpp  comch_control_channel.cpp  comch_control_channel.hpp  configuration.hpp  main.cpp  stats.hpp  thread.cpp  thread.hpp
applications/east_west_overlay_encryption/: meson.build
applications/eth_l2_fwd/: eth_l2_fwd_core.c  meson.build
applications/eth_l2_fwd/dependencies/: meson.build
applications/file_compression/: file_compression_core.c  meson.build
applications/file_integrity/: file_integrity_core.c  meson.build
applications/gpu_packet_processing/: gpu_packet_processing.c  meson.build
applications/gpu_packet_processing/config_queues/: common.h  flow.c  http_txbuf.c  icmp_queues.c  tcp_queues.c  udp_queues.c
applications/gpu_packet_processing/gpu_kernels/: filters.cuh  receive_udp.cu
applications/ip_frag/: ip_frag_dp.c  meson.build
applications/ipsec_security_gw/: add-doca-plugin-to-strongswan.patch  config.c  flow_common.c  flow_decrypt.c  flow_encrypt.c  ipsec_ctx.c  ipsec_ctx.h  ipsec_security_gw.c  meson.build
applications/nvme_emulation/: meson.build  meson.build.public  nvme_emulation.c  rpc_nvmf_doca.py
applications/nvme_emulation/device/: doca_transport_attributes.yaml
applications/nvme_emulation/host/: doca_transport.c  nvmf_doca_io.c  nvmf_doca_io.h  nvmf_rpc.c
applications/pcc/: build_device_code.sh.public  meson.build
applications/pcc/device/: meson.build
applications/pcc/host/: meson.build  pcc.c  pcc_core.c
applications/psp_gateway/: meson.build  psp_gateway.cpp  psp_gw_config.h  psp_gw_flows.cpp  psp_gw_flows.h  psp_gw_params.cpp  psp_gw_pkt_rss.cpp  psp_gw_svc_impl.cpp
applications/secure_channel/: meson.build  secure_channel_core.c
applications/simple_fwd_vnf/: meson.build  simple_fwd.c  simple_fwd.h  simple_fwd_ft.c  simple_fwd_pkt.c  simple_fwd_port.c  simple_fwd_vnf.c  simple_fwd_vnf_core.c  simple_fwd_vnf_core.h
applications/storage/: comch_to_rdma_gga_offload.cpp  initiator_comch.cpp  meson.build  meson.build.public
applications/storage/storage_common/: binary_content.cpp  buffer_utils.cpp  control_channel.cpp  control_message.cpp  control_message.hpp  doca_utils.hpp  file_utils.cpp  io_message.cpp  io_message.hpp  ip_address.cpp  lz4_sw_context.cpp  os_utils.hpp
applications/stream_receive_perf/: meson.build
applications/switch/: meson.build  switch.c  switch_core.c
applications/time_sync/: meson.build  meson.build.public
applications/time_sync/common/: meson.build  meson.build.public  time_sync_common.c  time_sync_common.h
applications/unit_test/: applications_round_1.txt  compile_public_applications.sh
applications/upf_accel/: meson.build  upf_accel.h  upf_accel_flow_processing.c  upf_accel_pipeline.c  upf_accel_pipeline.h  upf_accel_print_header.c  upf_accel_print_header.h  upf_accel_smf_default_init.h
applications/urom_rdmo/: meson.build  meson.build.public
applications/virtiofs/: meson.build  meson.build.public  virtiofs.c  virtiofs_core.c  virtiofs_core.h  virtiofs_device.c  virtiofs_device.h  virtiofs_manager.c  virtiofs_manager.h  virtiofs_mpool.c  virtiofs_mpool.h  virtiofs_request.c  virtiofs_request.h  virtiofs_thread.c  virtiofs_thread.h  virtiofs_utils.h
applications/yara_inspection/: meson.build  yara_inspection_core.c
samples/: common.c  common.h  common_utils.h  meson.build
samples/doca_aes_gcm/: aes_gcm_common.c  meson.build
samples/doca_apsh/: meson.build
samples/doca_comch/: meson.build
samples/doca_common/: meson.build
samples/doca_compress/: meson.build
samples/doca_data_direct/: meson.build
samples/doca_devemu/: devemu_pci_host_common.h  devemu_pci_type_config.h  devemu_pci_vfio_bind.py  meson.build
samples/doca_dma/: meson.build
samples/doca_dpa/: README.md  dpa_common.h  meson.build
samples/doca_erasure_coding/: meson.build
samples/doca_eth/: eth_common.c  eth_flow_common.c  meson.build
samples/doca_flow/: flow_common.c  flow_common.h  flow_ct_common.c  flow_ct_common.h  flow_eth_common.c  flow_eth_common.h  flow_switch_common.c  flow_switch_common.h  meson.build
samples/doca_gpunetio/: README.md  meson.build  verbs_common.c  verbs_common.h  verbs_high_level.c
samples/doca_mgmt/: README.md  meson.build
samples/doca_rdma/: README.md  meson.build
samples/doca_rmax/: meson.build  rmax_common.c
samples/doca_sha/: meson.build
samples/doca_telemetry/: README.md  meson.build
samples/doca_telemetry_exporter/: README.md  meson.build
samples/doca_urom/: README.md  meson.build  urom_common.c
samples/doca_verbs/: README.md  build_dpacc_samples.sh.public  meson.build
samples/unit_test/: compile_public_samples.sh  samples_round_1.txt  samples_round_2.txt
(+439 files in other folders)
